--- a/fiver/tsconfig.json
+++ b/fiver/tsconfig.json
@@ -21,6 +21,6 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/app/pages/index.jsx", "src/app/pages/_documents.jsx", "src/app/pages/_app.jsx"],
   "exclude": ["node_modules"]
 }
